fix mobile spacing

--- a/assets/index.css
+++ b/assets/index.css
@@ -368,11 +368,11 @@ body {
   @media screen and (max-width: 889px) {
     .upper {
       margin-top: -2em;
-      margin-bottom: 2em;
     }
     
     .name {
-      margin-top: 1.7em;
+      /* margin-top: 1.7em; */
+      margin-bottom: -0.3em;
       font-size: 3em;
     }
     
